# kr_3_operations_on_accounts

./: README.md  pyproject.toml
tests/: conftest.py  test.json  test_arrs_json.py  test_transactions_class.py
utils/: Transactions.py  arrs_json.py  func.py  main.py  py_dict.py
