[tool.poetry]
name = "kr-3-operations-on-accounts"
version = "0.1.0"
description = ""
authors = ["Aleksandr Shishkin <shishkin015@gmail.com>"]
readme = "README.md"
packages = [{include = "kr_3_operations_on_accounts"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
